crates/uitest/fixtures/ty/def/trait_super_trait_cycle.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_super_trait_cycle.fe
---
error[5-0002]: cyclic trait bounds are not allowed
  ┌─ trait_super_trait_cycle.fe:1:11
  │
1 │ pub trait Foo: Bar {}
  │           ^^^ trait cycle detected here
2 │ 
3 │ pub trait Bar
  │           --- cycle continues here
  ·
7 │ pub trait Baz: Foo {}
  │           --- cycle continues here
